Update app interface link in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Karamoja Climate Portal</h1>
     <p>Monitoring tool for Climate Change and Early Warning.</p>
     <br>
-    <a href="https://tu-usuario.users.earthengine.app/view/karamoja-climate-portal" class="btn">Open App Interface</a>
+    <a href="https://ee-jersoncatalyst.projects.earthengine.app/view/karamoja-climate-portal" class="btn">Open App Interface</a>
     <br><br>
     <p>Developed by: Jerson ACHICANOY</p>
 </body>
